# 1D-heat-diffusion-problem

./: CMakeLists.txt  README.md  bash.sh
src/: matrix.cpp
